# jpeg2000-rust

./: .gitmodules  Cargo.toml  LICENSE-MIT  README.md  build.rs
examples/: decode.rs
examples/images/: rust_logo.jp2
openjp2-sys/: Cargo.toml  build.rs  wrapper.h
openjpeg2-sys/: Cargo.toml  build.rs  wrapper.h
src/: decode.rs  error.rs  lib.rs
src/decode/: color_convert.rs  mod.rs  support.rs
