[package]
name = "jpeg2000"
version = "0.1.0"
authors = ["Leo Schwarz <mail@leoschwarz.com>"]
license = "GPL-3.0 AND BSD-2-CLAUSE"
description = "Rust bindings to OpenJPEG"
repository = "https://github.com/leoschwarz/jpeg2000-rust"

[dependencies]
image = "0.18.0"
libc = "0.2.34"
#openjpeg2-sys = { path = "openjpeg2-sys", version = "0.1.0" }
openjpeg2-sys = "0.1.0"

