[package]
name = "jpeg2000"
version = "0.2.0"
authors = ["Leo Schwarz <mail@leoschwarz.com>"]
license = "GPL-3.0"
description = "Rust bindings to OpenJPEG"
repository = "https://github.com/leoschwarz/jpeg2000-rust"

[dependencies]
image = "0.20"
libc = "0.2.34"
#openjpeg2-sys = { path = "openjpeg2-sys", version = "0.1.0" }
openjpeg2-sys = "0.1.0"
slog = "2.0"

[dev-dependencies]
slog-async = "2.2"
slog-term = "2.3"
