[package]
name = "openjpeg2-sys"
version = "0.1.0"
authors = ["Leo Schwarz <mail@leoschwarz.com>"]
links = "openjp2"
build = "build.rs"
license = "BSD-2-Clause"
description = "Statically links against OpenJPEG2, used by the jpeg2000 crate."
repository = "https://github.com/leoschwarz/jpeg2000-rust"

[dependencies]

[build-dependencies]
bindgen = "0.32.0"
cmake = "0.1.29"
gcc = "0.3.54"
